<resources>
    <string name="app_name">Running Log Pro</string>
    <string name="current_month">Current Month</string>
    <string name="graph">graph</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="weekly_mileage">Weekly Mileage</string>
    <string name="all_workout">All Workout</string>
    <string name="combined">Combined</string>
    <string name="run_name">Run Name</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="run_type">Run Type</string>
    <string name="feel">Feel</string>
    <string name="week">Week</string>
    <string name="excellent">Excellent</string>
    <string name="great">Great</string>
    <string name="good">Good</string>
    <string name="tired">Tired</string>
    <string name="exhausted">Exhausted</string>
    <string name="language">Language</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="alert1">You have to type distance</string>
    <string name="alert2">You have to type time</string>
    <string name="alert3">Empty Data</string>
    <string name="confirm_alarm">Alarm set</string>
    <string name="confirm_delete">Deleted</string>
    <string name="confirm_import">Data imported</string>
    <string name="confirm_export">Data exported to external memory</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="noti">Alarm Me</string>
</resources>
