<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_graph"
        android:title="@string/graph"
        android:icon="@drawable/graph"
        app:showAsAction="always"
        ></item>
    <item
        android:id="@+id/action_current"
        android:title="@string/current_month"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_export"
        android:title="@string/export_data"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_import"
        android:title="@string/import_data"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_language"
        android:title="@string/language"
        app:showAsAction="never"></item>
</menu>