<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_custom_calendar"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp"

        >
    <ImageButton
        android:background="@drawable/left_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/previousBtn"></ImageButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/current_Date"
            android:text="Current Date"
            android:layout_marginTop="7dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1">

        </TextView>
        <ImageButton
            android:background="@drawable/right_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/nextBtn"></ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp"
        android:background="@color/sky">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mo"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_weight="1"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tu"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_weight="1"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/we"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_weight="1"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/th"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_weight="1"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fr"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_weight="1"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sa"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_weight="1"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/su"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_weight="1"></TextView>
    </LinearLayout>
    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridview"
        android:padding="5dp"
        android:numColumns="7"
        android:layout_weight="4">

    </GridView>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/fab"
            android:layout_gravity="end"
            android:backgroundTint="@color/sky"
            android:textAlignment="center"
            android:src="@drawable/add"
            android:layout_marginRight="20dp"></android.support.design.widget.FloatingActionButton>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2298280937767584/1187957381">
            <!--    ads:adUnitId="ca-app-pub-2298280937767584/1187957381"-->
            <!--                  ca-app-pub-3940256099942544/6300978111-->
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>